--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ django-rest-auth = "==0.9.5"
 django-allauth = "==0.40.0"
 coreapi = "==2.3.3"
 pyyaml = "==5.1.2"
+gunicorn = "*"
 
 [dev-packages]
 
